# RapidMatch

./: CMakeLists.txt  LICENSE  README.md
configuration/: config.h  types.h
dataset/test/: test.py
graph/: graph.cpp  graph.h
matching/: CMakeLists.txt  encoder.cpp  encoder.h  engine.cpp  execution_tree.cpp  execution_tree.h  execution_tree_generator.cpp  execution_tree_generator.h  execution_tree_node.cpp  execution_tree_node.h  matchingcommand.cpp  matchingcommand.h  playground.cpp  preprocessor.cpp  preprocessor.h  query_plan_generator.cpp  query_plan_generator.h
preprocessing/: CMakeLists.txt  EdgeListToCSR.cpp  GraphConverter.cpp  ReassignLabel.cpp  SelectEdge.cpp
utility/: CMakeLists.txt  QFilter.h  commandparser.cpp  commandparser.h  computesetintersection.cpp  computesetintersection.h  global_variables.cpp  global_variables.h  graphoperations.cpp  graphoperations.h
utility/han/: intersection_algos.cpp  intersection_algos.hpp
utility/hashjoin/: CMakeLists.txt  hash_helpers.h  hashjoins_test.cpp  nop_join.cpp  nop_join.h
utility/leapfrogtriejoin/: leapfrogtriejoin.cpp  leapfrogtriejoin.h
utility/nucleus_decomposition/: CMakeLists.txt  bucket.cpp  bucket.h  hierarchy.cpp  k3-4.cpp  kcore.cpp  ktruss.cpp  nd.h  nd_interface.cpp  nd_interface.h  util.cpp
utility/primitive/: nlf_filter.cpp  nlf_filter.h  projection.cpp  projection.h  scan.cpp  scan.h  search.cpp  search.h  semi_join.cpp  semi_join.h
utility/relation/: catalog.cpp  catalog.h  edge_relation.h  encoded_trie_relation.h  flat_relation.h  hash_relation.h  trie_relation.h
